# qry-delphi-oracle

./: .gitignore  CMakeLists.txt
compiled/: delphioracle.abi  delphioracle.wasm
dummy/: CMakeLists.txt
include/: delphioracle.hpp
ricardian/: delphioracle.clauses.md  delphioracle.contracts.md
src/: CMakeLists.txt  delphioracle.cpp
